--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+.gg {
+  border-radius: .5rem;
+  background-color: red;
+}
