Employeed page was added as well as functionality

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,5 +8,11 @@
   .ac-right {
     flex-grow: 1;
   }
+
+  .ac-content {
+    border-radius: .5rem;
+    padding: 1rem;
+    background-color: #fff;
+  }
 }
 
