--- a/src/app/common/components/app-sidebar/app-sidebar.component.html
+++ b/src/app/common/components/app-sidebar/app-sidebar.component.html
@@ -5,19 +5,19 @@
   </section>
 
   <section class="as-menu">
-    <a class="as-menu-item" routerLink="/dashboard" routerLinkActive="active">
-      <i class="fas fa-home"></i>
-      Home
-    </a>
-    <a class="as-menu-item" routerLink="/employees" routerLinkActive="active">
+<!--    <a class="as-menu-item" routerLink="dashboard" routerLinkActive="active">-->
+<!--      <i class="fas fa-home"></i>-->
+<!--      Home-->
+<!--    </a>-->
+    <a class="as-menu-item" routerLink="employees" routerLinkActive="active">
       <i class="fas fa-user-friends"></i>
       Employees
     </a>
-    <a class="as-menu-item" routerLink="/login">
+    <a class="as-menu-item">
       <i class="fas fa-users"></i>
       Team
     </a>
-    <a class="as-menu-item" routerLink="/signup">
+    <a class="as-menu-item">
       <i class="fas fa-cogs"></i>
       Settings
     </a>
