--- a/src/app/common/components/app-sidebar/app-sidebar.component.scss
+++ b/src/app/common/components/app-sidebar/app-sidebar.component.scss
@@ -36,16 +36,17 @@ $bgColor: #fff;
     margin: .5rem 0;
     border-radius: .5rem;
     font-size: 14px;
-    color: darken($bgColor, 60);
-
-    &:hover {
-      background-color: darken($bgColor, 4);
-      cursor: pointer;
-      color: black;
-    }
+    color: darken($bgColor, 50);
 
     i {
       margin-right: .75rem;
+    }
+
+    &.active,
+    &:hover {
+      background-color: darken($bgColor, 5);
+      cursor: pointer;
+      color: black;
     }
   }
 }
