--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<app-card>
+  <form [formGroup]="form">
+    <div class="mb-3">
+      <label for="email" class="form-label">Email address:</label>
+      <input type="email"
+             class="form-control"
+             id="email"
+             formControlName="email"
+             aria-describedby="emailHelp">
+      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+    <div class="mb-3">
+      <label for="passowrd" class="form-label">Password:</label>
+      <input type="password"
+             class="form-control"
+             formControlName="password"
+             id="passowrd">
+    </div>
+
+    <button type="submit" class="btn btn-primary">Log in</button>
+  </form>
+</app-card>
